# MAGEPLUS

./: .gitignore  .gitmodules  convert_record_to_csv.py  pyproject.toml  requirements.txt
Datasets/RTLCoder/: Neo4j-b79daec3-Created-2025-06-15.txt  json_to_csv.py  verify.py
src/mage/: agent.py  rag_simple.py  selfrag_integration.py  sim_reviewer.py
tests/: test_top_agent.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat  jp.py
